[fix] Style post previews scrollbar.

--- a/src/ui/_post_previews.scss
+++ b/src/ui/_post_previews.scss
@@ -40,4 +40,38 @@ $media-size: 400px;
             }
         }
     }
+
+    ::-webkit-scrollbar {
+        width: 5px;
+        height: 5px;
+    }
+    ::-webkit-scrollbar-button {
+        width: 0px;
+        height: 0px;
+    }
+    ::-webkit-scrollbar-thumb {
+        background: #999999;
+        border: 0px none #ffffff;
+        border-radius: 0px;
+    }
+    ::-webkit-scrollbar-thumb:hover {
+        background: #ffffff;
+    }
+    ::-webkit-scrollbar-thumb:active {
+        background: #ffffff;
+    }
+    ::-webkit-scrollbar-track {
+        background: #eeeeee;
+        border: 0px none #ffffff;
+        border-radius: 0px;
+    }
+    ::-webkit-scrollbar-track:hover {
+        background: #eeeeee;
+    }
+    ::-webkit-scrollbar-track:active {
+        background: #333333;
+    }
+    ::-webkit-scrollbar-corner {
+        background: transparent;
+    }
 }
